Slightly better load older, broken on ios

--- a/index.css
+++ b/index.css
@@ -197,7 +197,7 @@ a:hover { color: inherit; }
 [data-discussion] {
    position: relative;
 }
-[data-atoldest] .loadolder {
+[data-atoldest] [data-loadolder] {
    display: none; 
 }
 #discussionuserlist {
