--- a/index.css
+++ b/index.css
@@ -287,6 +287,17 @@ a:hover { color: inherit; }
 /* User settings */
 #userlocaloptions input { }
 
+/* Swag animations */
+[data-pulsing] {
+   animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+  0% { filter: none; }
+  50% { filter: saturate(3) brightness(1.3); }
+  100% { filter: none; }
+}
+
 /* Scrollbar! WOW */
 ::-webkit-scrollbar { width: 10px; } /* width */
 ::-webkit-scrollbar-track { background: rgba(128,128,128,0.1); } /* Track */
