--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@ body {
    top: 0; bottom: 0; left: 0; right: 0;
    overflow: hidden;
 }
+button > *, a > * { pointer-events: none; }
 
 /* Some theming stuff */
 html, body, .uk-modal-dialog, .uk-dropdown {
