Mostly working outer scroll snap

--- a/index.css
+++ b/index.css
@@ -253,6 +253,7 @@ a:hover { color: inherit; }
    padding-bottom: 1px;
 }
 #postdiscussiontext { 
+   transition: height 0.15s ease;
    resize: none; 
    height: 2.2em;
 }
