--- a/index.css
+++ b/index.css
@@ -69,6 +69,11 @@ code {
 /*.uk-link { cursor: pointer; }*/
 hr { border-top: 1px solid rgba(128,128,128, 0.2); }
 .notext { font-size: 0; } /*display: contents; }*/
+audio {
+   height: 30px;
+   display: block;
+   max-width: 100%;
+}
 /* Stuff that should probably be taken over by uikit */
 /*input[type="file"] { cursor: pointer; }*/
 a:hover { color: inherit; }
@@ -78,7 +83,7 @@ a:hover { color: inherit; }
    padding-top: 0.45em; /* TODO: this is a repeat! */
    border-top: 1px solid rgba(128,128,128,0.1);
 }
-/* The rest */
+/* Basic page structure */
 .databar { padding: 0 0.1em; }
 [data-connectionindicator="error"] { 
    filter: hue-rotate(180deg); 
@@ -279,7 +284,7 @@ a:hover { color: inherit; }
 }
 /* CategoryLists */
 [data-pageitem]:nth-child(even) {
-   background-color: rgba(128,128,128,0.1);
+   background-color: rgba(128,128,128,0.05);
 }
 [data-pageitem] [data-name] {
    font-size: 1.1em;
@@ -296,6 +301,21 @@ a:hover { color: inherit; }
 #searchconstraints {
    border: 1px solid rgba(128,128,128,0.1);
    margin-top: 5px;
+}
+/* Homepage */
+[data-homehistory] {
+   max-height: 25em;
+}
+/* History */
+[data-historyitem] {
+   padding: 0.05em 0.3em;
+}
+[data-historyitem]:nth-child(even) {
+   background-color: rgba(128,128,128,0.05);
+}
+[data-history] {
+   background-color: rgba(128,128,128,0.02);
+   padding-bottom: 1.3em;
 }
 
 /* Swag animations */
