--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
    --mutedtextcolor : rgba(128,128,128, 0.7);
 }
 body {
-   position: absolute;
+   position: fixed; /*absolute;*/
    top: 0; bottom: 0; left: 0; right: 0;
    overflow: hidden;
 }
