--- a/index.css
+++ b/index.css
@@ -178,7 +178,7 @@ a:hover { color: inherit; }
    margin: 0.15em;
    opacity: 0.6;
 }
-#logs [data-message] { white-space: pre-wrap; }
+.logmessage { white-space: pre-wrap; }
 .log_trace { opacity: 0.50; }
 .log_debug { color: #74b587; }
 .log_error { color: #C42; }
@@ -198,7 +198,7 @@ a:hover { color: inherit; }
 /* Pulse styling (should really just use uikit stuff) */
 /* -------------------------------------------------- */
 [data-pw] { padding: 0.45em 0.9em 0.5em 0.9em; }
-[data-pwname] {
+.pwname {
    font-size: 1.3em;
    margin-bottom: 0.25em;
 }
@@ -220,7 +220,9 @@ a:hover { color: inherit; }
    /*border-radius: 5px;*/
    border-radius: 2px;
 }
-[data-username] {
+/* USED FOR MULTIPLE THINGS, OOPS: pwusername, history username,
+ * messageframeinfo username */
+.username { 
    margin: 0 0.4em;
 }
 
@@ -257,7 +259,7 @@ a:hover { color: inherit; }
 #discussionscontainer {
    min-height: 45%;
 }
-[data-messageframe] [data-useravatar] {
+[data-messageframe] .avatar {
    margin: 0.3em;
    width: 30px;
 }
@@ -271,7 +273,7 @@ a:hover { color: inherit; }
    visibility: hidden;
    margin: 0.2em 0.15em;
 }
-[data-messageframe] [data-frametime] {
+[data-messageframe] time {
    font-size: 0.75em;
 }
 [data-singlemessage]:focus, [data-singlemessage]:hover  {
@@ -283,7 +285,7 @@ a:hover { color: inherit; }
 [data-singlemessage]:hover .messagecontrol {
    visibility: visible;
 }
-[data-message] img {
+[data-singlemessage] .content img {
    max-height: 35vh;
    display: block;
    margin: 0.5em 0;
@@ -307,7 +309,7 @@ a:hover { color: inherit; }
 .content { white-space: pre-wrap; }
 .content ul { margin: 0.1em 0 0.4em 0; }
 .pagecontrols { margin-right: -15px !important; }
-[data-watch="true"] path {
+[data-watched="true"] path {
    fill: #EE5588; 
    color: #EE5588; 
    opacity: 0.8;
@@ -321,12 +323,13 @@ a:hover { color: inherit; }
 [data-pageitem]:nth-child(even), [data-historyitem]:nth-child(even) {
    background-color: var(--lightblockbgcolor);
 }
-[data-pageitem] [data-name] {
+[data-pageitem] .title {
    font-size: 1.1em;
    padding: 0.2em;
 }
 /*[data-pageitem] [data-time] { white-space: pre-wrap; }*/
-[data-pageitem] [data-avatar] {
+[data-pageitem] .avatar {
+   border: none;
    margin-right: 3px;
    margin-left: 6px;
 }
@@ -419,7 +422,7 @@ textarea::-webkit-scrollbar { width: 3px; } /* width */
 /* Some reaction crap or whatever it's called */
 @media (min-width: 700px) { 
    #breadcrumbs a, #breadcrumbs>*::before { font-size: 1.1em; }
-   [data-messageframe] [data-useravatar] { width: 60px; }
+   [data-messageframe] .avatar { width: 60px; }
 }
 
 /* Dark mode? */
